CSS Triangles Rendering Regression affecting CSS Ribbons. https://bugs.webkit.org/show_bug.cgi?id=156121

Reviewed by Simon Fraser.

Source/WebCore:

We use floored border width values for painting (see BorderEdge).
However border-box sizing is based on rounded border values. This mismatch could result in a 2 device pixel
gap when both top and bottom (or left and right) borders are present.

This patch applies flooring on the computed border width value.

It matches FireFox (44.0.2) behaviour (both by inspecting box-sizing visually and through getComputedStyle() values on border-width).

Covered by existing tests.

* css/StyleBuilderConverter.h:
(WebCore::StyleBuilderConverter::convertLineWidth):

LayoutTests:

Rebeaseline to match current behaviour.

* fast/inline/hidpi-inline-text-decoration-with-subpixel-value-expected.html:
* platform/mac/css1/units/length_units-expected.txt:
* platform/mac/fast/css/bidi-override-in-anonymous-block-expected.txt:
* platform/mac/fast/multicol/span/anonymous-style-inheritance-expected.txt:
* platform/mac/fast/repaint/repaint-during-scroll-with-zoom-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-initial-value-001-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-style-001-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-style-002-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-style-004-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-with-three-values-001-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-with-two-values-001-expected.txt:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-top-left-radius-values-003-expected.txt:
* platform/mac/media/video-zoom-expected.txt:
* platform/mac/svg/custom/svg-fonts-in-html-expected.txt:
* platform/mac/svg/zoom/page/zoom-background-image-tiled-expected.txt:
* platform/mac/svg/zoom/page/zoom-background-images-expected.txt:
* platform/mac/svg/zoom/page/zoom-img-preserveAspectRatio-support-1-expected.txt:
* platform/mac/svg/zoom/page/zoom-replaced-intrinsic-ratio-001-expected.txt:
* platform/mac/svg/zoom/page/zoom-svg-float-border-padding-expected.txt:
* platform/mac/svg/zoom/page/zoom-svg-through-object-with-auto-size-expected.txt:
* platform/mac/tables/mozilla_expected_failures/bugs/bug1055-2-expected.txt:


Canonical link: https://commits.webkit.org/174313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199034 268f45cc-cd09-0410-ab3c-d52691b4dbfc